--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,8 +53,8 @@
         "xhash": "cpp"
     },
     "C_Cpp.clang_format_fallbackStyle": "{ BasedOnStyle: Google, IndentWidth: 4}",
-    "editor.fontSize": 14.5,
-    "editor.fontFamily": "hasklig",
+    // "editor.fontSize": 14.5,
+    // "editor.fontFamily": "hasklig",
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "editor.formatOnPaste": true
