--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ cmake-build-debug/CMakeFiles/3.20.2/CompilerIdC/a.exe
 cmake-build-debug/CMakeFiles/3.20.2/CompilerIdC/CMakeCCompilerId.c
 cmake-build-debug/CMakeFiles/3.20.2/CompilerIdCXX/a.exe
 cmake-build-debug/CMakeFiles/3.20.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/format
